--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,7 +461,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("../img/hero-bg.jpg") top left;
+  background: url("../img/hero2-bg.png") top left;
   background-size: cover;
   position: relative;
 }
@@ -543,6 +543,9 @@ h6 {
 #hero .btn-watch-video:hover i {
   color: #3b8af2;
 }
+
+
+
 
 @media (min-width: 1024px) {
   #hero {
