--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -461,7 +461,7 @@ h6 {
 #hero {
   width: 100%;
   height: 75vh;
-  background: url("../img/hero2-bg.png") top left;
+  background: url("../img/hero2-bg.webp") top left;
   background-size: cover;
   position: relative;
 }
